test/Interop/Cxx/class/access/private-fileid-nested-typecheck.code
// A test that ensures LANGUAGE_PRIVATE_FILEID annotations on nested C++ classes
// works as expected.
//
// RUN: split-file %s %t
// RUN: %target-language-frontend -typecheck -verify %t/file1.code -I %t/include -cxx-interoperability-mode=default -module-name main
// RUN: %target-language-frontend -typecheck -verify %t/file2.code -I %t/include -cxx-interoperability-mode=default -module-name main

//--- include/module.modulemap
module CxxModule {
    requires cplusplus
    header "cxx-header.h"
}

//--- include/cxx-header.h
#ifndef CXX_HEADER_H
#define CXX_HEADER_H

class __attribute__((__language_attr__("private_fileid:main/file1.code"))) OK {
private:
  void priv(void) const {}
};

class __attribute__((__language_attr__("private_fileid:main/file1.code"))) Outer {
public:
  class __attribute__((__language_attr__("private_fileid:main/file2.code"))) Inner {
  private:
    void priv(void) const {}
  };
private:
  void priv(void) const {}
};
#endif /* CXX_HEADER_H */

//--- file1.code
import CxxModule
extension OK {
    fn ext() {
        priv()
    }
}
extension Outer {
    fn ext() {
        priv()
    }
}
extension Outer.Inner {
    fn ext() {
        priv() // expected-error {{'priv' is inaccessible due to 'private' protection level}}
    }
}

//--- file2.code
import CxxModule
extension OK {
    fn ext() {
        priv() // expected-error {{'priv' is inaccessible due to 'private' protection level}}
    }
}
extension Outer {
    fn ext() {
        priv() // expected-error {{'priv' is inaccessible due to 'private' protection level}}
    }
}
extension Outer.Inner {
    fn ext() {
        priv()
    }
}
